--- a/0. Rarimo's Value Proposition.md
+++ b/0. Rarimo's Value Proposition.md
@@ -1,3 +1,51 @@
 # Verifiable Self-Issued Identity
 
-https://docs.rarimo.com/
+Rarimo aims to provide a protocol that enables "trustless self-issuance", a means to perform identity verification in a private manner where a user establishes their identity using only government-issued biometric documents and no third-party issuer, primarily accomplished through ZKPs.
+
+Basically, by using said biometric documents (which in this case would be your passport), Rarimo aims to:
+- Counteract the proliferation of bot/fake accounts
+- By extension of the above point, counteract Sybilling
+- Enable anonymous interactions to create "confidential social graphs"
+	- The implication is that interactions remain private unless a user chooses to disclose them via ZKPs
+	- By extension, you're supposed to be able to remain "untraceable" in the sense that your Web3 interactions cannot be clustered then mapped back to you
+- Through passport-derived profiles, dApps can then:
+	- Restrict access based on country/nationality
+	- Set age requirements
+	- "Verify personhood"
+
+The Rarimo [whitepaper](https://docs.rarimo.com/files/Rarimo_whitepaper_v3.pdf) primarily speaks of the whole private/confidential social graph concept, where users stay incognito while still being able to prove actions and relationships. Although it gets a little messy, it just boils down to this: you can remain anonymous on a dApp and disclose _nothing_, but if someone wants you to prove that you've done something (made a specific post, own a specific item, etc.), then you can choose to. 
+
+As compared to the much more practical and immediately obvious application that ZKPs for passports provide, the whole private social graph "next generation self-sovereign social protocol" doesn't feel as concrete or well built up. Like, the argument against fully anonymised platforms like 4chan is that _"the lack of mechanisms to verify statements, prove ownership, or establish enduring relationships poses significant challenges"_. However, there are measures that enable such things already for most purposes (the use of tripcodes, PGP keys)...
+
+# Ecosystem
+
+Before we look at the raw technical details on how Rarimo aims to achieve its whole "passport ZKP" system, let's look at projects that make use of the protocol to get a better idea of how its features can be utilised.
+## Freedom Tool
+
+Using ZKPs, passports are validated in order to enable verifiable online voting. The [whitepaper](https://freedomtool.org/#/doc) is bloody long but the bulk of it are technical details on the implementation. Essentially, Rarimo is able to ascertain the authenticity of the passport thanks to the existence of the Machine-Readable Zone (MRZ) of a passport, which includes an RFID chip which contains the issuer's digital signature.
+
+The way this is utilised is immediately obvious: For an election, if you can verify a person's citizenship, age and make use of their passport number as an ID for them (so by extension, verifying a passport's expiry date), then you can verify their eligibility to vote and allow the vote to be cast in a trustless manner.
+## Identity State Replication
+
+Both the [Polygon ID State Replication](https://docs.rarimo.com/ecosystem/polygon-id-state-replication/) and the [WorldCoin State Replication](https://docs.rarimo.com/ecosystem/worldcoin-state-replication/) are basically just extensions of the Identity State Replication feature that Rarimo Protocol apparently offers.
+
+The issue this aims to tackle is that on-chain identity protocols need to have their state replicated to another chain if you want cross-chain identity proofs...?
+
+Erm, to quote: "The stateful nature of the on-chain identity protocols hinders the portability of credentials. The state must be replicated when submitting a zero-knowledge proof to any chain other than the primary one." Basically, these self-sovereign identity protocols usually maintain Merkle trees or make use of nullifiers to prevent Sybilling (which in this case is reusing your passport rather than spoofing accounts).
+
+The answer, apparently, is to have a network of oracles to observe the state updates on the source chain, then a network of validators to "secure the updates" with a threshold signature. (Does there not already exist frameworks to allow for cross-chain invocation? Is it this deep?)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
