--- a/1. The ZK Passport.md
+++ b/1. The ZK Passport.md
@@ -31,7 +31,7 @@ By virtue of relying on biometric passports, this means that Rarimo isn't applic
 
 We'll highlight whatever issues we spot along the way as we look through the technical implementation.
 
-# Deriving The Profile
+# Deriving and Storing The Profile
 
 We'll go through it step-by-step as described in the docs:
 1. User generates a keypair `<sk, pk>` 
@@ -42,3 +42,29 @@ We'll go through it step-by-step as described in the docs:
 	1. The docs say this proof shows that the passport public key "is signed by a key from the ICAO list, without revealing the exact passport's issuer". But the passport public key isn't signed by them? I'm assuming it's the signed version of the hash of the public key found in the DSO they're talking about.
 4. The circuit calculates a commitment `DG_commit = Hash(DG1 || Hash(sk))`
 5. The user submits `<pk, passport public key, sig, reg_proof>` to the smart contract.
+6. Upon submission, the generated public key `pk` and the passport public key (which we shall denote as `pk_pass`) are saved in a Sparse Merkle Tree
+	1. Sparse Merkle Trees differ from regular Merkle Trees by the existence of null values as leaves, allowing you to place a leaf at a chosen location "arbitrarily", allowing you to form a sort of key-value pair in a Merkle Tree
+	2. In this case, the key is the hash of the public keys combined, while the value is the hash of its position combined with `DG_commit`
+	3. The utility of these hash "commitments" is that they can only be derived from the values that make it up (duh) without disclosing those values themselves, so we are able to prove the existence of this passport being registered in the Sparse Merkle Tree and that we have the corresponding secret key (as `sk` is part of the `DG_commit`)
+
+# Limitations
+
+As previously stated, with this current implementation it's a given that:
+- Non-biometric passports (so passports that are all paper still) will not be applicable to be onboarded
+- Passports which do not have Active Authentication enabled are also ineligible
+- There are no protections against stolen passports or freshly issued fake passports from being used in this system, especially because a core aspect of how passports even _function_ (the ability to match one's face to the face on the passport, take a scan of their fingerprints) is absent from this system
+	- Possibilities: rogue customs officer can register people for this without their consent, someone could do a "passport skim" by scanning the chip via NFC without your consent, undemocratic state issues a fuckload of fake passports with fake issuing and expiry dates, etc.
+	- It would be extremely non-trivial to be able to, say, leverage the fingerprint scanner on a phone or something as the "authentication"
+- If you own multiple valid passports, you can basically "self Sybil". I suppose Rarimo can then require the hash of some identifying information that would be invariant across the passports and then check against all existing entries, but then it would 1) violate their whole "privacy preserving social graph" thing since it would require _you being able to ID entries_ and 2) would likely be near impossible to implement due to all the possible fringe cases
+
+These by far are the most glaring issues with the idea of using passports as this sort of proof-of-humanity altogether. But we press on, and look at how they apply ZKPs to this...
+
+# ZKPs on the Passport
+
+Rarimo makes use of a framework called [circom](https://github.com/iden3/circom) to construct their ZKP circuits, brought over to the ETH ecosystem with [Hardhat-zkit](https://github.com/dl-solarity/hardhat-zkit). As for the validity and safety of these circuits, Rarimo has undergone [audits](https://docs.rarimo.com/resources/audits/) by Halborn and Ambisafe, so we shall, well, trust their word on it.
+
+This bit is surprisingly straightforward, assuming the entire system works as intended:
+- The authentication part is by comparing against the Sparse Merkle Tree as previously mentioned. It relies on the user possessing the secret key generated when registering and the whole DG1 data block, which is basically all the readable data found in the MRZ, with these being passed in to a ZK circuit alongside the Merkle tree root to prove both existence of it being in the tree itself and that the hashed values match up
+- Following authentication, we then have the selective data reveal circuit. There's a bunch of parameters, but basically it requires the DG1 (MRZ with your birthday, expiration date, name, nationality, citizenship, sex and document number all present) and DG15 (the active authentication public key) sections part of the private inputs, then some query (what data to reveal, the bounds of the birthday and expiration date, etc.), with the outputs being as requested from the query
+
+This _seems_ like a complicated black magic ZK circuit, but in all actuality these are very much doable, especially since you've got basic operations in play (AND selected bits by 1 to reveal, 0 them otherwise. Checking if a value is within bounds is also trivially achievable with logic gates — its our prototypical ZKP example after all)
